--- a/MainActivity/res/layout/contact_button_fragment_list_item.xml
+++ b/MainActivity/res/layout/contact_button_fragment_list_item.xml
@@ -2,11 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:id="@+id/contact_item_ll" >
+    android:orientation="vertical" >
 
     <Button
-        android:id="@+id/contact_button1"
+        android:id="@+id/button1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
