--- a/GlenRockAppV1/res/layout/contact_form_fragment.xml
+++ b/GlenRockAppV1/res/layout/contact_form_fragment.xml
@@ -8,32 +8,33 @@
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/blue"
         android:text="Sending To:"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/sending_to_edittext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Mayor" />
+        android:inputType="textPersonName" 
+        android:textColor="#7aa1b0"/>
 
     <EditText
         android:id="@+id/editText1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dip"
         android:layout_weight="0.18"
         android:ems="10"
         android:inputType="textMultiLine" >
-
         <requestFocus />
     </EditText>
 
     <Button
         android:id="@+id/button1"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="@color/blue"
         android:text="Send" />
 
 </LinearLayout>
