--- a/GlenRockAppV1/res/layout/contact_button_fragment.xml
+++ b/GlenRockAppV1/res/layout/contact_button_fragment.xml
@@ -14,6 +14,9 @@
         android:id="@android:id/list"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" 
+        android:divider="@color/bg_gray"
+        android:fadeScrollbars="false"
+        android:dividerHeight="0dip"
         android:padding="3dp">
     </ListView>
 
