--- a/GlenRockAppV1/res/layout/go_local_button_fragment_list_item.xml
+++ b/GlenRockAppV1/res/layout/go_local_button_fragment_list_item.xml
@@ -3,10 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:id="@+id/go_local_item_ll" >
+    android:id="@+id/go_local_dir_item_ll" >
 
     <Button
         android:id="@+id/go_local_button1"
+        android:padding="1dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
