--- a/GlenRockAppV1/res/layout/go_local_dir_fragment.xml
+++ b/GlenRockAppV1/res/layout/go_local_dir_fragment.xml
@@ -3,15 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-    
-    <TextView
-        android:id="@+id/glTextView"
+   
+    <ListView
+        android:id="@android:id/list"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:maxLines = "500"
-        android:scrollbars = "vertical" />
-    
+        android:layout_height="wrap_content" 
+        android:divider="@color/bg_gray"
+        android:dividerHeight="1dp"
+        android:padding="12dp">
+    </ListView>
 
 </LinearLayout>
