--- a/GlenRockAppV1/res/values/color.xml
+++ b/GlenRockAppV1/res/values/color.xml
@@ -1,4 +1,5 @@
 <resources>
 	<color name="bg_gray">#D8D8D8</color>
 	<color name="blue">#0066FF</color>
+	<color name="grayish_gray">#C9C9C9</color>
 </resources>
