--- a/GlenRockAppV2/GlenRockAppV1/res/layout/go_local_dir_fragment_list_item.xml
+++ b/GlenRockAppV2/GlenRockAppV1/res/layout/go_local_dir_fragment_list_item.xml
@@ -38,5 +38,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:maxLines = "2"
-        android:scrollbars = "vertical" />
+        android:scrollbars = "vertical"
+        android:autoLink="web"
+        android:linksClickable="true" />
 </LinearLayout>
