Moved gl icon and created start page

--- a/GlenRockAppV2/GlenRockAppV1/res/layout/welcome_layout.xml
+++ b/GlenRockAppV2/GlenRockAppV1/res/layout/welcome_layout.xml
@@ -1,22 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/welcome_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/blue"
-        android:textSize="14sp"
-        android:textStyle="bold" >
+        android:layout_gravity="center_horizontal"
+        android:text="@string/welcome_intro"
+        android:textColor="@color/gl_blue"
+        android:textSize="55sp"
+        android:padding="20dp">
     </TextView>
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_gravity="center"
         android:src="@drawable/gl_icon"
         android:visibility="visible" />
+    <TextView
+        android:id="@+id/loading_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/gl_blue"
+        android:text="@string/welcome_loading"
+        android:textSize="20sp"
+        android:layout_gravity="center_horizontal"
+        android:padding="10dp"
+        android:textStyle="bold" >
+    </TextView>
 
 </LinearLayout>
