--- a/GlenRockAppV2/GlenRockAppV1/res/values/color.xml
+++ b/GlenRockAppV2/GlenRockAppV1/res/values/color.xml
@@ -2,6 +2,7 @@
 
     <color name="bg_gray">#D8D8D8</color>
     <color name="blue">#0066FF</color>
+    <color name="gl_blue">#084d9a</color>
     <color name="grayish_gray">#C9C9C9</color>
     <color name="black">#000000</color>
 
