Checks for internet connection
Changed how news fragment works, added in refresh button for news.
Added in loading screen.  Loading screen needs to continue when
connection made.  Doesn't check if connection to json can be made.

--- a/json2/GlenRockAppV1/res/values/color.xml
+++ b/json2/GlenRockAppV1/res/values/color.xml
@@ -1,8 +1,8 @@
 <resources>
-
+	<color name="gl_blue">#084d9a</color>
     <color name="bg_gray">#D8D8D8</color>
     <color name="blue">#0066FF</color>
     <color name="grayish_gray">#C9C9C9</color>
     <color name="black">#000000</color>
-
+	<color name="white">#FFFFFF</color>
 </resources>
