--- a/GlenRockAppV1/res/layout/calendar.xml
+++ b/GlenRockAppV1/res/layout/calendar.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@drawable/background"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    tools:context=".CalendarFragment"
+    android:id = "@+id/calendar_frag_rl" >
 
     <LinearLayout
         android:id="@+id/text"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/gridview"
         android:layout_marginLeft="5dp"
@@ -24,37 +27,12 @@
         -->
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/linearLayout1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:orientation="horizontal" >
-
-        <EditText
-            android:id="@+id/editText1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ems="10"
-            android:hint="Search" >
-
-            <requestFocus />
-        </EditText>
-
-        <Button
-            android:id="@+id/button1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Go" />
-    </LinearLayout>
 
     <RelativeLayout
         android:id="@+id/header"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/linearLayout1"
         android:background="@drawable/calendar_top" >
 
         <RelativeLayout
@@ -64,6 +42,7 @@
             android:layout_alignParentLeft="true" >
 
             <ImageView
+                android:id="@+id/imageview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
@@ -77,7 +56,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="5dip"
             android:textColor="#000000"
-            android:textSize="18dip"
+            android:textSize="18sp"
             android:textStyle="bold" />
 
         <RelativeLayout
@@ -87,6 +66,7 @@
             android:layout_alignParentRight="true" >
 
             <ImageView
+                android:id="@+id/imageview2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
@@ -95,24 +75,24 @@
     </RelativeLayout>
 
     <GridView
-        android:id="@+id/gridview"
+        android:id="@id/gridview"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/header"
+        android:layout_below="@id/header"
         android:listSelector="@android:color/transparent"
         android:numColumns="7"
         android:stretchMode="columnWidth" >
 
     </GridView>
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:text="DAILY EVENTS GO HERE"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+    <ListView
+        android:id="@+id/calendar_short_event_list"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" 
+        android:layout_below="@id/gridview"
+        android:padding="3dp">
+    </ListView>
+
 
 </RelativeLayout>
