fix crash in calendar search removal

--- a/GlenRockAppV1/res/layout/calendar.xml
+++ b/GlenRockAppV1/res/layout/calendar.xml
@@ -27,12 +27,22 @@
         -->
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/linearLayout1"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:orientation="horizontal" >
+
+   
+    </LinearLayout>
 
     <RelativeLayout
         android:id="@+id/header"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
+        android:layout_below="@id/linearLayout1"
         android:background="@drawable/calendar_top" >
 
         <RelativeLayout
